chore: cleaned up code a bit. improved error handling in ZaakafhandelParameterBeheerService